# bric-calc

./: .gitignore  README.md  app.py  main.py  models.py  optimizer.py  pyproject.toml  scrapers.py
templates/: _results_content.html  base.html  index.html  parts.html  results.html  search.html
